make tokio a workspace dep, because we need it directly in wasmtime-wasi

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -239,6 +239,7 @@ tempfile = "3.1.0"
 filecheck = "0.5.0"
 libc = "0.2.60"
 file-per-thread-logger = "0.2.0"
+tokio = { version = "1.26.0" }
 
 [features]
 default = [
